Ok, I've started a changelog!
v 3.1 - * Added Supercontainer object class code. #set USE_SUPERCONTAINER to include.
v 3.0 - * Changed some DoGo code and grammar to allow "go out/off of <object>"
	* Added "config_sys.h", a configuration file manager (helps games write data to one file instead of several). Sort of experimental but hopefully it's ready for release. Colorlib has been updated to use it, even if it's currently a bit ugly.
v 2.9 - * Added Object Sorting section to complement ListChildren routine
	* Fixed CalculateHolding bug
	* Fixed DoUnlock/DoLock. some messages weren't called correctly and now it makes sure that
	keys are available (and not in a closed box or something).
	* Added ability to string manipulation to write the results to a second array (instead
	of overwriting the original array)
	* Added optional NO_LOOK_TURNS flag to quickly allow games where DoLookAround, DoLook,
	DoLookIn, and DoLookThrough do not take a turn.
	* Added some object-picking code to extraroutines.hug to make it easier to pick 
	objects/elements from parents or arrays based on routine-based criteria
v 2.8 - * Made characters default to having exclude_from_all true
        * Added a ClearArray call to FindStatusHeight to prevent room from being printed twice
          in statustype-less games
        * Updated rdyshell to call flags.hug, switchgram.g, and inclusions.h
	* new "New Style Pronouns" and "Routine Grammar Helper" sections added
v 2.7 - * Added ROODYBANNER and ROODYVERSION constants to make it easier for games to proclaim
	the Roodylib version in DoVersion and/or the game title segment, if they choose.
	* Added default "XYZZY" response so Hugo authors aren't bugged to provide responses.
	* Use the NO_XYZZY flag if you'd like to turn it off.
	* Added USE_EXTENSION_CREDITING section for listing included extensions in CREDITS responses
	* Added a status_top property to the printstatuslib system so status windows can coexist